# EderEngine

./: README.md  main.cpp
.claude/: settings.local.json
EderCore/: CMakeLists.txt  compile_windows.bat
EderCore/src/: EderCore.h
EderCore/src/ECS/: Entity.h  Registry.h
EderCore/src/ECS/Components/: AnimationComponent.h  AudioSourceComponent.h  CameraComponent.h  CharacterControllerComponent.h  ColliderComponent.h  CollisionCallbackComponent.h  HierarchyComponent.h  LayerComponent.h  LightComponent.h  MeshRendererComponent.h  RigidbodyComponent.h  ScriptComponent.h  SunShaftsComponent.h  TagComponent.h  TransformComponent.h  VolumetricFogComponent.h  VolumetricLightComponent.h
EderCore/src/ECS/Systems/: System.h  TransformSystem.h
EderCore/src/Events/: EventBus.h  Events.h
EderCore/src/IO/: AssetManager.h  DebugDraw.h  KRCommon.h  KRCompiler.h  PakFile.h  SceneSerializer.h
EderCore/src/PostProcess/: PostProcessGraph.h
EderCore/src/Scene/: Scene.h  SceneManager.h
EderGame/: CMakeLists.txt  compile_windows.bat
EderGame/src/: Application.cpp  Application.h  VulkanGizmo.cpp  VulkanGizmo.h  VulkanOcclusionPass.h  VulkanSunShafts.cpp  VulkanSunShafts.h  VulkanVolumetricFog.h  VulkanVolumetricLight.cpp  VulkanVolumetricLight.h  main.cpp
EderGame/src/Audio/: AudioSystem.cpp  AudioSystem.h
EderGame/src/Editor/: Editor.cpp  Editor.h  EditorTypes.h
EderGame/src/Editor/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  CameraPanel.cpp  CameraPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  Panel.h  PostProcessPanel.cpp  PostProcessPanel.h  SceneViewPanel.cpp  SceneViewPanel.h  StatsPanel.cpp  StatsPanel.h
EderGame/src/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
EderGame/src/Player/: PlayerApp.cpp  PlayerApp.h  PlayerMain.cpp
EderGame/src/Scripting/: LuaScriptSystem.cpp  LuaScriptSystem.h
EderGame/src/UI/: UIFontImpl.cpp  UIRenderer.cpp  UIRenderer.h  UISystem.cpp  UISystem.h  UITypes.h
EderGraphics/: CMakeLists.txt  compile_android.bat  compile_windows.bat
EderGraphics/.claude/: settings.local.json
EderGraphics/build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
EderGraphics/build-android-arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
EderGraphics/build-android-armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
EderGraphics/build-android-x86/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
EderGraphics/build-android-x86_64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
EderGraphics/build-windows/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
EderGraphics/src/: main.cpp
EderGraphics/src/Core/: AssetBridge.cpp  AssetBridge.h  Camera.cpp  Camera.h  DLLHeader.h  LightBuffer.cpp  LightBuffer.h  Lights.h  Material.cpp  Material.h  MaterialLayout.cpp  MaterialLayout.h  MaterialManager.cpp  MaterialManager.h  MaterialProperty.h  MeshManager.cpp  MeshManager.h  Renderer.h  Scene.cpp  Scene.h  SceneObject.h  TextureManager.cpp  TextureManager.h  Transform.h  Vertex.h
EderGraphics/src/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h
EderGraphics/src/Renderer/Vulkan/: BoneSSBO.cpp  BoneSSBO.h  ImportCore.h  VulkanBlit.cpp  VulkanBlit.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebugOverlay.cpp  VulkanDebugOverlay.h  VulkanDepthBuffer.cpp  VulkanDepthBuffer.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGizmo.cpp  VulkanGizmo.h  VulkanInstance.cpp  VulkanInstance.h  VulkanInstanceBuffer.cpp  VulkanInstanceBuffer.h  VulkanMesh.cpp  VulkanMesh.h  VulkanOcclusionPass.cpp  VulkanOcclusionPass.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPointShadowMap.cpp  VulkanPointShadowMap.h  VulkanPointShadowPipeline.cpp  VulkanPointShadowPipeline.h  VulkanPostProcessPass.cpp  VulkanPostProcessPass.h  VulkanShadowMap.cpp  VulkanShadowMap.h  VulkanShadowPipeline.cpp  VulkanShadowPipeline.h  VulkanSkybox.cpp  VulkanSkybox.h  VulkanSpotShadowMap.cpp  VulkanSpotShadowMap.h  VulkanSunShafts.cpp  (+9 more)
EderHub/: CMakeLists.txt  compile_windows.bat
EderHub/src/: HubApp.cpp  HubApp.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  main.cpp
docs/: ScriptingAPI.md  index.html
